# lucebox-hub

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  CONTRIBUTING.md  Dockerfile  Dockerfile.rocm  Makefile  README.md  docker-bake.hcl  pyproject.toml
optimizations/megakernel/: README.md  RESULTS.md  _phase2_variant.py  bench.py  bench_pp_tg.py  bench_pp_tg_nvfp4.py  build_corpus.py  diag_phase2_metrics.py  diag_prefill_kernels.py  final_bench.py  final_bench_nvfp4.py  half_type.h  kernel_gb10_nvfp4.cu  model.py  model_nvfp4.py  prefill_bw.cu  prefill_megakernel.cu  pyproject.toml
optimizations/megakernel/corpus/: baseline.json  wmma.json  wmma_p3.json  wmma_p4.json  wmma_p6cleanup.json  wmma_p7.json  wmma_p8.json
optimizations/pflash/: README.md  pyproject.toml
optimizations/pflash/pflash/: __init__.py  config.py  dflash_client.py
optimizations/pflash/tests/: bench_niah_cpp.py  niah_gen.py
server/: .gitignore  CMakeLists.txt  CODEX.md  DEVELOPER.md  README.md  RESULTS.md  pyproject.toml
server/docs/: ARCHITECTURE.md  HIP_PERF_PLAN.md  MIXED_BACKEND.md  PREFIX_CACHE.md  SPEC_PREFILL.md  laguna_integration_plan.md  moe_hybrid.md
server/eval/: README.md
server/eval/humaneval_plus/: SOURCE.txt
server/eval/mt_bench/: SOURCE.txt
server/examples/: chat.py
server/hip_compat/: cuda_bf16.h  cuda_fp16.h  cuda_runtime.h  mma.h
server/include/: dflash27b.h
server/scripts/: _prefill_hook.py  bench_agent.py  bench_agent_loop.py  bench_daemon.py  bench_he.py  bench_he_http.py  bench_llm.py  bench_moe_prefill_streaming.py  bench_server.py  convert_dflash_to_gguf.py  detokenize.py  entrypoint.sh  gen_oracle.py  laguna_pflash_niah.py  parity_laguna.py  phase_split_dual_gpu.py  quality_ab_simple.py  quality_humaneval_plus.py  quantize_draft_q8.py  quantize_gemma_dflash_q8.py  run.py  server.py  setup_system.sh  test_full_compress_cache.py  test_multi_turn_prefix_cache.py  test_prefill_cache.py  test_prefix_cache.py  test_server.py  test_server_prefix_cache.py  test_tool_memory.py  tokenize_prompt.py  tool_memory.py
server/scripts/placement/: __init__.py  backend_device.py  server_resolver.py  test_dflash_args.py
server/share/: status.html
server/src/: bsa_fwd_inst.cu  bsa_launcher.cu  bsa_launcher_hip.cu  cuda_cross_device_copy.cpp  delta_net_chunked.cpp  delta_net_chunked.h  device_runtime.h  errors.cpp  flashprefill.cpp  flashprefill.h  flashprefill_f16.cu  flashprefill_kernels.cu  flashprefill_kernels.hip.cu  flashprefill_q8.cpp  flashprefill_scalar.cu  flashprefill_select.cpp  internal.h  kv_cache.cpp  kv_quant.cpp  kv_quant.h  pflash_ggml_adapter.cpp  pflash_ggml_adapter.h  rms_norm_hip.cu
server/src/common/: attn_masks.h  backend_factory.cpp  backend_factory.h  backend_ipc.cpp  backend_ipc.h  backend_precision.cpp  backend_precision.h  daemon_loop.h  ddtree.cpp  ddtree.h  device_placement.h  dflash_capture.cpp  dflash_capture.h  dflash_draft_graph.cpp  dflash_draft_graph.h  dflash_draft_ipc.cpp  dflash_draft_ipc.h  dflash_draft_ipc_daemon.cpp  dflash_feature_ring.cpp  dflash_feature_ring.h  dflash_layer_split_runtime.h  dflash_spec_decode.cpp  dflash_spec_decode.h  dflash_target.h  gguf_inspect.cpp  gguf_inspect.h  gguf_mmap.h  io_utils.h  kvflash_pager.h  kvflash_scorer.h  layer_split_backend.cpp  layer_split_backend.h  layer_split_utils.cpp  layer_split_utils.h  model_backend.h  moe_hybrid_ffn_eval.cpp  moe_hybrid_ffn_eval.h  moe_hybrid_storage.cpp  moe_hybrid_storage.h  moe_hybrid_stream.cpp  (+12 more)
server/src/draft/: draft_gguf_loader.cpp  draft_graph.cpp  draft_graph.h  draft_safetensors_loader.cpp
server/src/gemma4/: gemma4_backend.cpp  gemma4_backend.h  gemma4_daemon.cpp  gemma4_daemon.h  gemma4_dflash_target.cpp  gemma4_dflash_target.h  gemma4_graph.cpp  gemma4_internal.h  gemma4_layer_split_adapter.cpp  gemma4_layer_split_adapter.h  gemma4_loader.cpp
server/src/hip_compat/: cuda_bf16.h  cuda_fp16.h
server/src/ipc/: backend_ipc_main.cpp
server/src/laguna/: laguna_backend.cpp  laguna_backend.h  laguna_daemon.cpp  laguna_daemon.h  laguna_dflash_target.cpp  laguna_internal.h  laguna_layer_split_adapter.cpp  laguna_layer_split_adapter.h  laguna_target_graph.cpp  laguna_target_loader.cpp
server/src/placement/: pflash_placement.h  placement_config.cpp  placement_config.h  remote_draft_config.h
server/src/qwen3/: qwen3_backend.cpp  qwen3_backend.h  qwen3_daemon.cpp  qwen3_daemon.h  qwen3_drafter.cpp  qwen3_drafter.h  qwen3_drafter_model.h  qwen3_graph.cpp  qwen3_kvflash_scorer.cpp  qwen3_kvflash_scorer.h  qwen3_loader.cpp
server/src/qwen35/: gguf_target_loader.cpp  graph_builders.cpp  graph_builders.h  layer_split_daemon.cpp  layer_split_daemon.h  layer_split_daemon_loop.cpp  layer_split_daemon_loop.h  layer_split_forward.cpp  layer_split_forward.h  layer_split_types.h  qwen35_backend.cpp  qwen35_ops.h  (+11 more)
server/test/: bench_laguna_generate.cpp  bench_laguna_pflash.cpp  bench_laguna_spark.cpp  bench_laguna_ttft.cpp  bench_moe_stream.cpp  pflash_daemon.cpp  smoke_draft_graph.cpp  smoke_laguna_forward.cpp  smoke_load_draft.cpp  smoke_load_target.cpp  smoke_load_target_laguna.cpp  smoke_qwen3_forward.cpp  smoke_target_forward.cpp  spike_thin_copy.cpp  test_dflash.cpp  test_drafter_tail_capture_guard.cpp  test_flash_attn_sparse.cpp  test_flashprefill_kernels.cpp  test_generate.cpp  test_kv_quant.cpp  test_kvflash.cpp  test_laguna_daemon.cpp  test_qwen35moe_expert_placement.cpp  test_qwen35moe_routing_stats.cpp  test_qwen35moe_swap_manager.cpp  test_restore_delta.cpp  test_server_unit.cpp  test_tokenizer_harness.cpp  test_vs_oracle.cpp
server/tests/: test_server_comprehensive.py  test_server_smoke.py  test_tokenizer.py
(+116 files in other folders)
