[project]
name = "lucebox-hub"
version = "0.0.0"
description = "Lucebox: open LLM inference, rewritten by hand for one specific chip at a time. Workspace root."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "Apache-2.0" }
authors = [{ name = "Lucebox" }]

dependencies = [
    "lucebox-dflash",
    "pflash",
]

[project.optional-dependencies]
megakernel = ["qwen35-megakernel-bf16"]
dev = ["pytest>=8", "mypy>=1.10,<2", "ruff>=0.14,<1"]

[tool.ruff]
target-version = "py312"
line-length = 100
# Staged lint adoption: the host-CLI / harness tooling is gated now. The
# server-internal and optimization Python (server/scripts, optimizations/*)
# carries pre-existing style debt and is added to `include` as it is cleaned
# up. Vendored deps stay excluded permanently (extend-exclude below).
include = ["harness/**/*.py", "scripts/**/*.py"]
extend-exclude = [
    "dflash/deps",
    "megakernel",
    "pflash",
]

[tool.ruff.lint]
# Correctness + imports + modernization + bugbear. Line-length / style (E5xx,
# E7xx) is intentionally staged out for now so the gate stays green without
# reflowing existing code; tighten once the tracked surfaces are clean.
select = ["F", "I", "UP", "B"]

[tool.uv]
package = false
# Megakernel's CUDAExtension links against torch's C++ libs, so the build
# and runtime envs must share the same torch wheel. uv's default isolated
# build env resolves `[build-system] requires` independently of the
# project's `[tool.uv.sources]` mapping, pulling torch from PyPI instead
# of the cu128 index below. That produces an ABI-incompatible .so
# (undefined symbol `_ZNR5torch7Library4_def...` on import). Skip
# isolation here and require a two-pass install:
#   1. `uv sync`                  → populates the main venv with cu128
#                                    torch + setuptools (via dflash deps)
#   2. `uv sync --extra megakernel` → compiles setup.py against that env
no-build-isolation-package = ["qwen35-megakernel-bf16"]

[tool.uv.workspace]
# Workspace members. Keeping the list to the packages that live in this
# repo lets `uv lock --check` / `uv sync --frozen` pass.
members = ["server", "optimizations/megakernel", "optimizations/pflash"]

[tool.uv.sources]
lucebox-dflash = { workspace = true }
pflash = { workspace = true }
qwen35-megakernel-bf16 = { workspace = true }
torch = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
