[project]
name = "pflash"
version = "0.3.0"
description = "Python client + bench harness for the lucebox dflash speculative-prefill daemon"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "lucebox"}]
license = {text = "MIT"}
keywords = ["llm", "speculative-decoding", "prefill", "long-context", "qwen"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
# Drafter scoring + spec decode happen inside the C++/CUDA daemon. The Python
# side only needs the HF tokenizers (one for the drafter vocab, one for the
# target vocab + chat template) to drive the bench harness.
dependencies = [
    "transformers>=4.50",
]

[project.urls]
Homepage = "https://github.com/Luce-Org/lucebox-hub"
Source = "https://github.com/Luce-Org/lucebox-hub/tree/main/pflash"
Blog = "https://lucebox.com/blog/pflash"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["pflash*"]
